Pages now display correctly on mobile.  Fixed form styling on ContactMe.html.  WebGL game is now properly in an iframe.

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@
 				margin:5%;
 				margin-left: auto;
     			margin-right: auto;
-				width: 25%;
+				width: 451px;
 				box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 			}
 			table{
